# recall

./: .gitignore  @adr_log.md  @current_context.md  @system_architecture.md  AGENTS.ans  AGENTS.md  CLAUDE.md  README.md  index.html  pyproject.toml  requirements.txt  setup.cfg
None/: chroma.sqlite3
core/: analytics.py  market_data.py  pricing.py  rating.py  risk.py
core/security/: key_manager.py
docs/: Windows_Native_Specification.md
docs/explanation/: architecture.md
docs/how-to/: manage_ans_files.md  use_memory.md
docs/memory/: knowledge_graph.md  vector_store.md
docs/reference/: ans_schema.md  cli.md
docs/setup/: linux.md  macos.md  windows.md
docs/tutorials/: getting_started.md
mcp/: registry.py  tools.py
memory/: context.py  knowledge_graph.py  nlp_utils.py  optimizer.py
memory/local_vector_store/: vector_memory_store.py
memory/profile/: manager.py
memory/sync_interface/: services.py
prompts/: summarize.txt  tag.txt
src/: main.py
src/AgentIntegration/: AGENTS.md
src/IngestionEngine/: AGENTS.md
src/RecallUI/: AGENTS.md
src/RetrievalCore/: AGENTS.md
src/Security/: AGENTS.md
src/Shared/: AGENTS.md
src/api/: AGENTS.ans  CLAUDE.md  server.py
src/cli/: AGENTS.md  main.py
src/core/: AGENTS.ans  AGENTS.md  CLAUDE.md  embedding.py  ingestion.py  llm_interface.py  memory_store.py  services.py  vector_memory_store.py
src/llm/: AGENTS.md  main.py  services.py
strategy/: alpha.py
tests/: test_analytics.py  test_api.py  test_engines.py  test_memory_advanced.py  test_memory_store.py  test_vector_memory_store.py
(+23 files in other folders)
