[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "total_recall"
version = "0.0.1"
authors = [
  { name="AI Agent", email="agent@example.com" },
]
description = "A portable, LLM-powered personal recall system."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
recall = "src.main:cli"
